Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1341

Select custom keys for signing Symbian package uses a directory picker (ie. doesn't work)

    XMLWordPrintable

Details

    • e04a303304ad8d8d64c4d724f6b5b4944e33b319

    Description

      I went to select my custom certificates so I could create a signed Symbian package but when I clicked "Browse" I got a directory picker instead of a file picker. Needless to say, I couldn't select the file that contained the certificate!

      Image attached.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rlohning Robert Löhning
            lramsay Lincoln Ramsay (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes