Fixed use of Pathchooser for signing Symbian sis files.

Task-number: QTCREATORBUG-1341